--- a/.github/workflows/enhanced-ci.yml
+++ b/.github/workflows/enhanced-ci.yml
@@ -490,18 +490,25 @@ jobs:
           cd "$module"
 
           # GoSec security scanner
-          gosec -fmt sarif -out gosec.sarif ./... || true
+          gosec -fmt sarif -out gosec-${module//\//-}.sarif ./... || true
 
           # Count critical issues from SARIF
-          if [ -f "gosec.sarif" ]; then
-            critical_count=$(jq '[.runs[].results[] | select(.level == "error")] | length' gosec.sarif 2>/dev/null || echo "0")
-            high_count=$(jq '[.runs[].results[] | select(.level == "warning")] | length' gosec.sarif 2>/dev/null || echo "0")
+          if [ -f "gosec-${module//\//-}.sarif" ]; then
+            critical_count=$(jq '[.runs[].results[] | select(.level == "error")] | length' gosec-${module//\//-}.sarif 2>/dev/null || echo "0")
+            high_count=$(jq '[.runs[].results[] | select(.level == "warning")] | length' gosec-${module//\//-}.sarif 2>/dev/null || echo "0")
             critical_vulns=$((critical_vulns + critical_count))
             high_vulns=$((high_vulns + high_count))
+            # Copy to root for upload
+            cp gosec-${module//\//-}.sarif ../gosec.sarif 2>/dev/null || true
           fi
 
           cd - > /dev/null
         done
+
+        # Ensure at least one SARIF file exists for upload
+        if [ ! -f gosec.sarif ]; then
+          echo '{"version":"2.1.0","runs":[]}' > gosec.sarif
+        fi
 
         # Dependency vulnerability scanning
         echo "  Scanning dependencies for vulnerabilities..."
