--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -18,6 +18,8 @@ permissions:
   contents: read
   security-events: write
   actions: read
+  packages: read
+  pull-requests: write  # Needed for PR comments
 
 jobs:
   # Code security analysis
@@ -127,6 +129,9 @@ jobs:
       if: always()
       with:
         sarif_file: 'trivy-results-${{ matrix.component }}.sarif'
+        category: 'trivy-${{ matrix.component }}'
+        wait-for-processing: false
+      continue-on-error: true
 
     - name: Run Grype vulnerability scanner
       uses: anchore/scan-action@v3
@@ -141,6 +146,9 @@ jobs:
       if: always()
       with:
         sarif_file: ${{ steps.grype-scan.outputs.sarif }}
+        category: 'grype-${{ matrix.component }}'
+        wait-for-processing: false
+      continue-on-error: true
 
     - name: Run Snyk container scan
       uses: snyk/actions/docker@master
@@ -173,6 +181,9 @@ jobs:
       if: always()
       with:
         sarif_file: checkov-k8s.sarif
+        category: 'checkov-k8s'
+        wait-for-processing: false
+      continue-on-error: true
 
     - name: Run Kubesec scan
       run: |
@@ -221,6 +232,9 @@ jobs:
       if: always()
       with:
         sarif_file: checkov-docker.sarif
+        category: 'checkov-docker'
+        wait-for-processing: false
+      continue-on-error: true
 
     - name: Run Checkov on Helm charts
       uses: bridgecrewio/checkov-action@master
@@ -235,6 +249,9 @@ jobs:
       if: always()
       with:
         sarif_file: checkov-helm.sarif
+        category: 'checkov-helm'
+        wait-for-processing: false
+      continue-on-error: true
 
     - name: Run Hadolint on Dockerfiles
       uses: hadolint/hadolint-action@v3.1.0
@@ -249,6 +266,9 @@ jobs:
       if: always()
       with:
         sarif_file: hadolint.sarif
+        category: 'hadolint'
+        wait-for-processing: false
+      continue-on-error: true
 
   # Secrets scanning
   secrets-scan:
