fix: Add security configurations and NetworkPolicy for CI/CD compliance
- Add NetworkPolicy for oran-vnf-operator and oran-orchestrator
- Add default deny-all NetworkPolicy for namespace isolation
- Update SECURITY.md with comprehensive security policy
- Fix various security-related configurations

These changes address Kubernetes security best practices including:
- Network segmentation via NetworkPolicy
- Pod-to-pod communication control
- Compliance with CKV_K8S checks for production deployment

--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -29,6 +29,13 @@ on:
         default: false
         type: boolean
 
+permissions:
+  contents: read
+  security-events: write
+  packages: write
+  actions: read
+  id-token: write
+
 env:
   REGISTRY: docker.io/thc1006
   NAMESPACE: o-ran-mano
