--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -308,12 +308,21 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Run TruffleHog
+    - name: Run TruffleHog (PR)
+      if: github.event_name == 'pull_request'
       uses: trufflesecurity/trufflehog@main
       with:
         path: ./
-        base: ${{ github.event.pull_request.base.sha || github.event.before || 'HEAD~1' }}
-        head: ${{ github.event.pull_request.head.sha || github.sha }}
+        base: ${{ github.event.pull_request.base.sha }}
+        head: ${{ github.event.pull_request.head.sha }}
+        extra_args: --debug --only-verified
+      continue-on-error: true
+
+    - name: Run TruffleHog (Push)
+      if: github.event_name == 'push'
+      uses: trufflesecurity/trufflehog@main
+      with:
+        path: ./
         extra_args: --debug --only-verified
       continue-on-error: true
 
