fix: Ensure gosec.sarif file is always created before upload
- Install gosec directly via go install instead of using action
- Create minimal valid SARIF file as fallback
- Add validation and error handling for SARIF generation
- Make artifact upload optional with continue-on-error

--- a/.github/workflows/enhanced-ci.yml
+++ b/.github/workflows/enhanced-ci.yml
@@ -334,8 +334,10 @@ jobs:
             ;;
           "license-check")
             echo "🔧 Installing license checking tools..."
-            go install github.com/fossa-contrib/fossa-cli@latest
-            pip install licensecheck
+            # Install go-licenses for Go dependency license checking
+            go install github.com/google/go-licenses@latest
+            # Install Python license checker
+            pip install licensecheck pip-licenses
             ;;
         esac
 
