--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -37,7 +37,7 @@ permissions:
   id-token: write
 
 env:
-  REGISTRY: docker.io/thc1006
+  REGISTRY: ghcr.io
   NAMESPACE: o-ran-mano
   TIMEOUT: 600
   PERFORMANCE_THRESHOLD_DEPLOYMENT_TIME: 600
@@ -134,14 +134,14 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ matrix.component }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ matrix.component }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
