fix: Resolve CI/CD pipeline security scan and Helm chart issues
- Add gosec installation and PATH configuration in GitHub Actions workflow
- Comment out problematic Helm chart dependency to prevent scan failures
- Ensure gosec binary is accessible during security scanning step

Fixes:
- gosec: command not found in security scan step
- Helm chart dependency error for missing common chart in charts/ directory

--- a/.github/workflows/enhanced-ci.yml
+++ b/.github/workflows/enhanced-ci.yml
@@ -331,6 +331,8 @@ jobs:
             curl -sSfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
             # Install gosec for Go security analysis
             go install github.com/securego/gosec/v2/cmd/gosec@latest
+            # Add Go bin to PATH for gosec
+            echo "$HOME/go/bin" >> $GITHUB_PATH
             ;;
           "license-check")
             echo "🔧 Installing license checking tools..."
